[package]
name = "reef"
description = "An abstraction of an entire CAP-style network"
version = "0.1.0"
authors = ["Jeb Bearer <jeb.bearer@translucence.net"]
edition = "2018"

[dependencies]
arbitrary = { version="1.0", features=["derive"] }
arbitrary-wrappers = { git = "https://github.com/EspressoSystems/arbitrary-wrappers.git", tag = "0.1.0" }
ark-serialize = { version = "0.3.0", features = ["derive"] }
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
funty = "=1.1.0"
itertools = "0.10.1"
jf-cap = { features=["std"], git = "https://github.com/EspressoSystems/cap.git", tag = "0.0.1" }
serde = { version = "1.0", features = ["derive"] }
snafu = { version = "0.6.10", features = ["backtraces"] }
strum_macros = "0.20.1"

[dev-dependencies]
lazy_static = "1.4.0"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
