[package]
name = "reef"
description = "An abstraction of an entire CAP-style network"
version = "0.3.1"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
arbitrary = { version="1.3", features=["derive"] }
arbitrary-wrappers = { git = "https://github.com/EspressoSystems/arbitrary-wrappers.git", tag = "0.3.0" }
ark-serialize = { version = "0.4.2", features = ["derive"] }
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.2.0" }
funty = "2.0"
itertools = "0.11.0"
jf-cap = { features=["std"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
jf-primitives = { features = ["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.2" }
lazy_static = "1.4.0"
rand_chacha = { version = "0.3.1", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
snafu = { version = "0.7", features = ["backtraces"] }
strum_macros = "0.24"

[features]
default = ["secure-srs"]
testing = []
secure-srs = ["jf-cap/bn254"]
